# SphereWiki

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
apps/desktop/e2e/: dangling-link-create.spec.ts  editor-flows.spec.ts  focus-help.spec.ts  local-loop.spec.ts  quick-switcher.spec.ts  theme-persist.spec.ts  wikilink-autocomplete.spec.ts
apps/desktop/src/: App.tsx  app-info.test.ts  app-info.ts  auth-dev.ts  auth-local.ts  desktop-backend.ts  index.test.ts  index.ts  main.tsx  seams.test.ts  seams.ts  theme.test.ts  theme.ts  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: duckdb_conformance.rs  lib.rs  main.rs  state.rs  vault.rs  vector.rs
apps/desktop/src/editor/: NoteEditor.test.tsx  NoteEditor.tsx  NoteWorkspace.test.tsx  NoteWorkspace.tsx  ask-panel.tsx  collapsible-panel.test.tsx  collapsible-panel.tsx  graph-view.test.tsx  graph-view.tsx  (+31 more)
apps/server/: package.json  tsconfig.json
apps/server/src/: file-persistence.test.ts  file-persistence.ts  index.test.ts  index.ts  sync-roundtrip.test.ts  sync-server.test.ts  sync-server.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
docs/: DESIGN.md  PRODUCT.md  ROADMAP.md  Todo.md
scripts/: reindex.mjs
(+27 files in other folders)
