[package]
name = "spherewiki-desktop"
version = "0.1.0"
description = "SphereWiki desktop (Tauri 2) shell"
authors = ["SphereWiki"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spherewiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

[dev-dependencies]
# Bundled DuckDB — a conformance check that it compiles/links here + does the vector storage M2b.4
# relies on. Promoted to a runtime [dependency] when M2b.4 adds the real vector-store commands.
duckdb = { version = "1.3.2", features = ["bundled"] }
